--- a/app/src/main/resources/themes/menu.css
+++ b/app/src/main/resources/themes/menu.css
@@ -91,16 +91,14 @@
 .combo-box {
   -fx-background-color: linear-gradient(to bottom, #34495e, #2c3e50);
   -fx-text-fill: #f8f8f2;
-  -fx-font-size: 18px;
-  -fx-padding: 10;
+  -fx-font-size: 16px;
+  -fx-padding: 5;
   -fx-border-radius: 10;
   -fx-background-radius: 10;
   -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.6), 5, 0, 0, 2);
-  -fx-cursor: hand;
-  -fx-transition: all 0.3s ease;
 }
 
-.combo-box:hover {
+.combo-box:{
   -fx-background-color: linear-gradient(to bottom, #4a6984, #3a506b);
 }
 
